@@ -65,8 +65,8 @@ fi
 JVM_TMP="$FORGE_ARGS.ambercraft"
 {
   echo "-Xms1G"
-  echo "-Xmx6G"
-  echo "-XX:+UseG1GC"
+  echo "-Xmx8G"
+  echo "-XX:+UseZGC"
   grep -v -E '^-Xms|^-Xmx|^-XX:\+Use(G1GC|ZGC)|^-XX:\+ZGenerational$' "$FORGE_ARGS"
 } > "$JVM_TMP"
 mv "$JVM_TMP" "$FORGE_ARGS"
